# monument-evac-sim

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  run_all_experiments.sh  run_experiment.py  setup.sh
analysis/: __init__.py  compare_experiments.py  evacuation_plots.py  proulx_1991.py
experiments/: base.yaml
experiments/E1/: README.md  config.yaml
experiments/E2/: README.md  config.yaml
experiments/E3/: README.md  config.yaml
experiments/E4/: README.md  config.yaml
experiments/E5/: README.md  config.yaml
geometry/monument/: .gitkeep  background_img.xml  network.net.xml
geometry/monument/network/: level_-1.xml  level_0.xml
results/: .gitkeep  preliminary_report.md
results/E1/run_20260420_134755/: agent_decisions.json  agent_decisions_history.jsonl  agent_decisions_positions.json  financial_report.txt  llm_prompt_log.jsonl  message_analytics.txt  performance_report.txt  population_timeseries.csv  population_timeseries.json  route_changes.txt  wait_behavior.txt
results/E2/run_20260420_140629/: agent_decisions.json  agent_decisions_history.jsonl  agent_decisions_positions.json  financial_report.txt  llm_prompt_log.jsonl  message_analytics.txt  performance_report.txt  population_timeseries.csv  population_timeseries.json  route_changes.txt  wait_behavior.txt
results/E3/run_20260420_171440/: agent_decisions.json  agent_decisions_history.jsonl  agent_decisions_positions.json  financial_report.txt  llm_prompt_log.jsonl  message_analytics.txt  performance_report.txt  population_timeseries.csv  population_timeseries.json  (+2 more)
(+22 files in other folders)
