[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monument-evacuation"
version = "0.1.0"
description = "Monument Station evacuation experiment series (E1–E5)"
requires-python = ">=3.10"
dependencies = [
    "evacusim @ git+https://github.com/your-org/evacusim.git",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
